Updated evilarch lightdm config

--- a/evilarch-xfce-lightdm-gtk-greeter-1.2.0.6-1/lightdm-gtk-greeter.conf
+++ b/evilarch-xfce-lightdm-gtk-greeter-1.2.0.6-1/lightdm-gtk-greeter.conf
@@ -1,4 +1,4 @@
-# Created for smd-ArchLinux
+# Created for EvilArch-XFCE
 #
 # LightDM GTK+ Configuration
 # Available configuration options listed below.
@@ -52,7 +52,7 @@
 [greeter]
 theme-name = Arc-Dark
 icon-theme-name = Sardi-Mono-Colora
-background = /usr/share/backgrounds/smd-arch/arch-linux-wallpaper-21.png
+background = /usr/share/backgrounds/smdlinux/arch-linux-wallpaper-21.png
 default-user-image = #start-here-arch
 position = 10%,start 50%,center
 screensaver-timeout = 3600
