--- a/evilarch-xfce-lightdm-gtk-greeter-1.2.0.6-1/PKGBUILD
+++ b/evilarch-xfce-lightdm-gtk-greeter-1.2.0.6-1/PKGBUILD
@@ -3,11 +3,11 @@
 # Source : https://launchpad.net/lightdm-gtk-greeter
 # Edited by Seth Dawson
 
-pkgname=smd-arch-lightdm-gtk-greeter
+pkgname=EvilArch-XFCE-lightdm-gtk-greeter
 pkgver=2.0.6
-pkgrel=1
+pkgrel=2
 epoch=1
-pkgdesc='smd-ArchLinux settings for GTK+ greeter for LightDM'
+pkgdesc='EvilArch-XFCE settings for GTK+ greeter for LightDM'
 arch=('x86_64')
 url='https://launchpad.net/lightdm-gtk-greeter'
 license=('GPL3' 'LGPL3')
