--- a/smdlinux-xfce-git/PKGBUILD
+++ b/smdlinux-xfce-git/PKGBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Seth Dawson <seth.dawson@hotmail.com>
-pkgname=smd-arch-xfce-git
-_pkgname=smd-arch-xfce
+pkgname=smdlinux-xfce-git
+_pkgname=smdlinux-xfce
 _destname1="/etc/skel/.config/Thunar/"
 _destname2="/etc/skel/.config/xfce4/"
 _destname3="/etc/skel/.config/autostart/"
-_licensedir="/usr/share/smd-arch/licenses/"
-pkgver=1.1
-pkgrel=4
+_licensedir="/usr/share/smd-linux/licenses/"
+pkgver=3.0
+pkgrel=1
 pkgdesc="Desktop configuration for Arch XFCE"
 arch=('any')
-url="https://github.com/smd-linux/smd-arch-xfce"
+url="https://github.com/smd-linux/smdlinux-xfce"
 license=('GPL3')
 makedepends=('git')
 depends=()
