--- a/evilarch-plank-git/PKGBUILD
+++ b/evilarch-plank-git/PKGBUILD
@@ -1,17 +1,16 @@
-# Maintainer: Seth Dawson <seth.dawson@hotmail.com>
-pkgname=smd-arch-xfce-dconf-git
-_pkgname=smd-arch-xfce-dconf
-_destname1="/etc/skel/.config/"
-_licensedir="/usr/share/smd-arch/licenses/"
-pkgver=1.1
-pkgrel=2
-pkgdesc="Configuration files for smd-arch"
+# Maintainer: Seth Dawson <seth@sethdawson.me>
+pkgname=evilarch-plank-git
+_pkgname=evilarch-plank
+_destname1="/etc/skel/.config/plank/dock1/launchers/"
+_licensedir="/usr/share/smdlinux/licenses/"
+pkgver=3.0
+pkgrel=1
+pkgdesc="plank config for Evil Arch Laptop"
 arch=('any')
-url="https://github.com/smd-linux/smd-arch-xfce-dconf"
+url="https://github.com/smd-linux/evilarch-plank"
 license=('GPL3')
 makedepends=('git')
 depends=()
-conflicts=(smd-arch-dconf-git)
 provides=("${pkgname}")
 options=(!strip !emptydirs)
 source=(${_pkgname}::"git+https://github.com/smd-linux/${_pkgname}.git")
@@ -22,5 +21,5 @@ package() {
 	install -m644  ${srcdir}/${_pkgname}/LICENSE ${pkgdir}${_licensedir}${_pkgname}
 
 	install -dm755 ${pkgdir}${_destname1}
-	cp -r  ${srcdir}/${_pkgname}${_destname1}* ${pkgdir}${_destname1}
+	cp -r ${srcdir}/${_pkgname}${_destname1}* ${pkgdir}${_destname1}
 }
