--- a/smdlinux-xfce-dconf-git/PKGBUILD
+++ b/smdlinux-xfce-dconf-git/PKGBUILD
@@ -1,16 +1,17 @@
-# Maintainer: Seth Dawson <seth@sethdawson.me>
-pkgname=smdlinux-neofetch-git
-_pkgname=smdlinux-neofetch
-_destname1="/etc/skel/.config/neofetch/"
+# Maintainer: Seth Dawson <seth.dawson@hotmail.com>
+pkgname=smdlinux-xfce-dconf-git
+_pkgname=smdlinux-xfce-dconf
+_destname1="/etc/skel/.config/"
 _licensedir="/usr/share/smdlinux/licenses/"
 pkgver=3.0
 pkgrel=1
-pkgdesc="neofetch config for smdlinux"
+pkgdesc="Configuration files for SMD-Linux XFCE"
 arch=('any')
-url="https://github.com/smd-linux/smdlinux-neofetch"
+url="https://github.com/smd-linux/smdlinux-xfce-dconf"
 license=('GPL3')
 makedepends=('git')
-depends=('bash' 'python')
+depends=()
+conflicts=(smdlinux-dconf-git)
 provides=("${pkgname}")
 options=(!strip !emptydirs)
 source=(${_pkgname}::"git+https://github.com/smd-linux/${_pkgname}.git")
@@ -21,5 +22,5 @@ package() {
 	install -m644  ${srcdir}/${_pkgname}/LICENSE ${pkgdir}${_licensedir}${_pkgname}
 
 	install -dm755 ${pkgdir}${_destname1}
-	install -m644  ${srcdir}/${_pkgname}${_destname1}* ${pkgdir}${_destname1}
+	cp -r  ${srcdir}/${_pkgname}${_destname1}* ${pkgdir}${_destname1}
 }
